make changes sent from Greg in Jan 2014

--- a/rdwrc_winter.html
+++ b/rdwrc_winter.html
@@ -51,22 +51,22 @@ keyword: rdwrc_winter
     <div class="container well categories">
       <h5>Categories</h5>
       <ol>
-        <li><label>10 boxes</label> : Ralph D. Winter's writing and presentations</li>
-        <li><label>18 boxes</label> : Ralph D. Winter's correspondence (outside USCWM/WCIU)</li>
-        <li><label>7 boxes</label> : Ralph D. Winter's internal correspondence (within USCWM/WCIU)</li>
-        <li><label>23 boxes</label> : Ralph D. Winter's biographical information</li>
-        <li><label>1 box</label> : Course related material</li>
-        <li><label>15 boxes</label> : Collected miscellaneous materials of interest to Ralph D. Winter</li>
-        <li><label>40 boxes</label> : USCWM core records</li>
-        <li><label>29 boxes</label> : WCIU core records</li>
-        <li><label>4 boxes</label> : Perspectives on the World Christian Movement</li>
-        <li><label>3 boxes</label> : World Christian Foundations</li>
-        <li><label>17 boxes</label> : Programs and initiatives of USCWM/WCIU other than Perspectives and WCF</li>
-        <li><label>10 boxes</label> : Official publications of on-campus organizations (USCWM/WCIU and other agencies)</li>
-        <li><label>11 boxes</label> : Financial records</li>
-        <li><label>4 boxes</label> : FMF core records and joint USCWM/WCIU core records</li>
-        <li><label>3 boxes</label> : Meetings planned by us and meetings held on campus</li>
-        <li><label>5 boxes</label> : Organizations started by Ralph D. Winter fully or in part</li>
+        <li><span class="enumeration"> 1)</span> <label>16 boxes</label> : Dr. Winter's Writings and Presentations</li>
+        <li><span class="enumeration"> 2)</span> <label>24 boxes</label> : Dr. Winter's Correspondence (outside USCWM/WCIU)</li>
+        <li><span class="enumeration"> 3)</span> <label>10 boxes</label> : Dr. Winter's Internal Correspondence (within USCWM/WCIU Organizational Memos or Correspondence)</li>
+        <li><span class="enumeration"> 4)</span> <label>33 boxes</label> : Dr. Winter's Biographical Information</li>
+        <li><span class="enumeration"> 5)</span> <label>1 box</label> : Course-related materials</li>
+        <li><span class="enumeration"> 6)</span> <label>17 boxes</label> : Collected Material</li>
+        <li><span class="enumeration"> 7)</span> <label>48 boxes</label> : USCWM core records</li>
+        <li><span class="enumeration"> 8)</span> <label>32 boxes</label> : WCIU core records</li>
+        <li><span class="enumeration"> 9)</span> <label>6 boxes</label> : Perspectives on the World Christian Movement</li>
+        <li><span class="enumeration">10)</span> <label>4 boxes</label> : World Christian Foundations</li>
+        <li><span class="enumeration">11)</span> <label>20 boxes</label> : Programs and Initiatives of USCWM/WCIU other than Perspectives and WCF</li>
+        <li><span class="enumeration">12)</span> <label>11 boxes</label> : Official publications of on-campus organizations (USCWM/WCIU and other agencies)</li>
+        <li><span class="enumeration">13)</span> <label>13 boxes</label> : Financial records</li>
+        <li><span class="enumeration">14)</span> <label>6 boxes</label> : FMF core records and joint USCWM/WCIU core records</li>
+        <li><span class="enumeration">15)</span> <label>3 boxes</label> : Meetings planned by Us and Meetings Held on Campus</li>
+        <li><span class="enumeration">16)</span> <label>7 boxes</label> : Organizations Started by Dr. Winter Fully or In Part</li>
       </ol>
       <ol class="legend">
         <li><label>USCWM</label> - U.S. Center for World Missions</li>
