add like to Wikipedia article and use new images

--- a/rdwrc_winter.html
+++ b/rdwrc_winter.html
@@ -24,7 +24,7 @@ keyword: rdwrc_winter
   </aside>
 
   <div class="col-md-10">
-    <div class="header">
+    <div class="header clearfix">
       <img class="img-rounded pull-right img-responsive" src="images/winter_at_messy_desk.jpg" />
       <div>
         <p class="lead">
@@ -45,6 +45,12 @@ keyword: rdwrc_winter
           Even though processing into these categories is not yet complete, materials can be made available to researchers who make advanced arrangements to visit the site. They must understand that the archival materials are still being processed.
           Contact <a href="mailto:me@example.com">me@example.com</a> for details.
         </p>
+        <p>
+          For more information on the legacy of Dr. Ralph D. Winter, you can visit his Wikipedia page: <a href="http://en.wikipedia.org/wiki/Ralph_D._Winter" target="_blank">http://en.wikipedia.org/wiki/Ralph_D._Winter</a>.
+        </p>
+
+        <img class="img-rounded pull-left img-responsive img-side-margin" src="images/rdwrc_winter_middle_shelves.jpg" />
+        <img class="img-rounded pull-left img-responsive img-side-margin" src="images/rdwrc_winter_back_shelves.jpg" />
       </div>
     </div>
 
