--- a/rdwrc_mcgavran.html
+++ b/rdwrc_mcgavran.html
@@ -39,13 +39,23 @@ keyword: rdwrc_mcgavran
           The Donald McGavran archives are primarily housed in two locations. <a href="http://www.wheaton.edu/bgc">The Billy Graham Center</a> at Wheaton College in Illinois, which holds papers from his early years. The Latourette Library at William Carey International University in Pasadena, California holds his papers from 1965 until his death in 1990.
         </p>
         <p>
-          The Pasadena papers are bing processed and increasingly more materials will be made available at this web site. Materials are accessible to researchers who make arrangements to visit the site.
-          Contact <a href="mailto:me@example.com">me@example.com</a> for details.
+          The Pasadena holdings of McGavran include about 3000 volumes, 12 file cabinets of his letters and writings, mission field artifacts — including McGavran's pith helmet! — as well as several oversized vintage Indian Railway Posters. Two McGavran scholars have studied McGavran's letters and we hope to have a more details of the materials in the collection outlined by the end of 2014. We should also finish cataloging his books by then. Once funds are available, we plan on mounting the posters and using his artifacts in rotating display.
         </p>
         <p>
           There are many photos and memorabilia along with vast correspondence and papers related to conferences and class work at Fuller Seminary.
         </p>
+        <p>
+          Even though processing into these categories is not yet complete, materials can be made available to researchers who make advanced arrangements to visit the site. They must understand that the archival materials are still being processed.
+          Contact <a href="mailto:me@example.com">me@example.com</a> for details.
+        </p>
+        <p>
+          For more information on the legacy of Donald McGavran, you can visit his Wikipedia page: <a href="http://en.wikipedia.org/wiki/Donald_McGavran" target="_blank">http://en.wikipedia.org/wiki/Donald_McGavran</a>.
+        </p>
       </div>
+
+      <img class="img-rounded pull-left img-responsive" src="images/rdwrc_book_shelves_small.jpg" />
+      <img class="img-rounded pull-left img-responsive img-side-margin" src="images/rdwrc_mcgavran_file_cabinent_open_small.jpg" />
+      <img class="img-rounded pull-left img-responsive" src="images/rdwrc_mcgavran_file_cabinents_small.jpg" />
     </div>
   </div>
 </div>
