--- a/rdwrc_contact.html
+++ b/rdwrc_contact.html
@@ -54,6 +54,16 @@ keyword: rdwrc
 
         <div class="form-group">
           <div class="col-sm-offset-2 col-sm-10">
+            <div class="checkbox">
+              <label>
+                <input type="checkbox">Email Newsletter updates
+              </label>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
             <button type="submit" class="btn btn-primary">Send Form</button>
           </div>
         </div>
