change email checkbox label

--- a/rdwrc_contact.html
+++ b/rdwrc_contact.html
@@ -56,7 +56,7 @@ keyword: rdwrc
           <div class="col-sm-offset-2 col-sm-10">
             <div class="checkbox">
               <label>
-                <input type="checkbox">Email Newsletter updates
+                <input type="checkbox">Send Newsletters by email
               </label>
             </div>
           </div>
