add alt tags for every image + switch to navigation pills

--- a/rdwrc.html
+++ b/rdwrc.html
@@ -7,7 +7,7 @@ keyword: rdwrc
 <div class="row">
   <div class="col-md-10">
     <div class="header">
-      <img class="img-rounded pull-right img-responsive img-margin" src="images/rdwrc_book_shelves_small.jpg" />
+      <img class="img-rounded pull-right img-responsive img-margin" src="images/rdwrc_book_shelves_small.jpg" alt="Ralph D. Winter books"/>
       <div>
         <h3>Executive Summary</h3>
         <p>
@@ -18,7 +18,7 @@ keyword: rdwrc
         </p>
       </div>
 
-      <img class="img-rounded pull-left img-responsive img-margin" src="images/rdwrc_mcgavran_file_cabinent_open_small.jpg" />
+      <img class="img-rounded pull-left img-responsive img-margin" src="images/rdwrc_mcgavran_file_cabinent_open_small.jpg" alt="Donald McGavran records"/>
       <div>
         <h3>Summary</h3>
         <p>
@@ -32,7 +32,7 @@ keyword: rdwrc
         </p>
       </div>
 
-      <img class="img-rounded pull-right img-responsivei img-margin" src="images/rdwrc_mcgavran_file_cabinents_small.jpg" />
+      <img class="img-rounded pull-right img-responsivei img-margin" src="images/rdwrc_mcgavran_file_cabinents_small.jpg" alt="Donald McGavran records"/>
       <div>
         <h3>An Analogy</h3>
         <p>
