--- a/rdwrc_mcgavran.html
+++ b/rdwrc_mcgavran.html
@@ -25,7 +25,7 @@ keyword: rdwrc_mcgavran
 
   <div class="col-md-10">
     <div class="header">
-      <img class="img-rounded pull-right img-responsive" src="images/donald_mcgavran.jpg" />
+      <img class="img-rounded pull-right img-responsive" src="images/donald_mcgavran.jpg" alt="Donald McGavran at USCWM"/>
       <div>
         <p class="lead">
           Donald Anderson McGavran<span class="text-muted"> : <small><em>December 15, 1897 - July 10, 1990</em></small></span>
@@ -53,9 +53,9 @@ keyword: rdwrc_mcgavran
         </p>
       </div>
 
-      <img class="img-rounded pull-left img-responsive" src="images/rdwrc_book_shelves_small.jpg" />
-      <img class="img-rounded pull-left img-responsive img-side-margin" src="images/rdwrc_mcgavran_file_cabinent_open_small.jpg" />
-      <img class="img-rounded pull-left img-responsive" src="images/rdwrc_mcgavran_file_cabinents_small.jpg" />
+      <img class="img-rounded pull-left img-responsive" src="images/rdwrc_book_shelves_small.jpg" alt="Donald McGavran's books"/>
+      <img class="img-rounded pull-left img-responsive img-side-margin" src="images/rdwrc_mcgavran_file_cabinent_open_small.jpg" alt="Donald McGavran's records"/>
+      <img class="img-rounded pull-left img-responsive" src="images/rdwrc_mcgavran_file_cabinents_small.jpg" alt="Donald McGavran's records"/>
     </div>
   </div>
 </div>
