--- a/rdwrc_winter.html
+++ b/rdwrc_winter.html
@@ -25,7 +25,7 @@ keyword: rdwrc_winter
 
   <div class="col-md-10">
     <div class="header clearfix">
-      <img class="img-rounded pull-right img-responsive" src="images/winter_at_messy_desk.jpg" />
+      <img class="img-rounded pull-right img-responsive" src="images/winter_at_messy_desk.jpg" alt="Ralph D. Winter's desk"/>
       <div>
         <p class="lead">
           Ralph Dana Winter<span class="text-muted"> : <small><em>December 8, 1924 : May 20, 2009</em></small></span>
@@ -49,8 +49,8 @@ keyword: rdwrc_winter
           For more information on the legacy of Dr. Ralph D. Winter, you can visit his Wikipedia page: <a href="http://en.wikipedia.org/wiki/Ralph_D._Winter" target="_blank">http://en.wikipedia.org/wiki/Ralph_D._Winter</a>.
         </p>
 
-        <img class="img-rounded pull-left img-responsive img-side-margin" src="images/rdwrc_winter_middle_shelves.jpg" />
-        <img class="img-rounded pull-left img-responsive img-side-margin" src="images/rdwrc_winter_back_shelves.jpg" />
+        <img class="img-rounded pull-left img-responsive img-side-margin" src="images/rdwrc_winter_middle_shelves.jpg" alt="Ralph D. Winter books"/>
+        <img class="img-rounded pull-left img-responsive img-side-margin" src="images/rdwrc_winter_back_shelves.jpg" alt="Ralph D. Winter books"/>
       </div>
     </div>
 
