--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ keyword: index
 
 <div class="large">
   <div class="container headline">
-    <img class="img-rounded pull-left img-responsive" src="images/winters_in_guatamala_1960.jpg" />
+    <img class="img-rounded pull-left img-responsive" src="images/winters_in_guatamala_1960.jpg" alt="Winters in Guatamala 1960"/>
     <h1>The Ralph D. Winter Research Center</h1>
     <p>
       The Ralph D. Winter Research Center is focused on the archival holdings of Ralph D. Winter and Donald McGavran, but also hosts consultations on important current issues in missiology.
@@ -19,8 +19,8 @@ keyword: index
 
 <div class="large">
   <div class="container">
-    <img class="img-rounded pull-right img-responsive" src="images/ralph-winter-portrait.jpg" />
-    <a href="lausanne_1974.html"><img class="img-rounded pull-right img-responsive" src="Lausanne_1974/Lausanne_1974_wordle_medium.png" /></a>
+    <img class="img-rounded pull-right img-responsive" src="images/ralph-winter-portrait.jpg" alt="Ralph D. Winter's portrait"/>
+    <a href="lausanne_1974.html"><img class="img-rounded pull-right img-responsive" src="Lausanne_1974/Lausanne_1974_wordle_medium.png" alt="Lausanne 1974"/></a>
     <div class="details">
       <h1>Ralph D. Winter archives</h1>
       <p class="lead">
@@ -44,7 +44,7 @@ keyword: index
 
 <div class="large">
   <div class="container">
-    <img class="img-rounded pull-right img-responsive" src="images/donald-mcgavran-portrait.jpg" />
+    <img class="img-rounded pull-right img-responsive" src="images/donald-mcgavran-portrait.jpg" alt="Donald McGavran's portrait"/>
     <div class="details">
       <h1>Donald McGavran archives</h1>
       <p class="lead">
