--- a/rdwrc_past_events.html
+++ b/rdwrc_past_events.html
@@ -10,28 +10,28 @@ keyword: rdwrc
 
       <ul>
         <li class="calendar">
-          <div class="date">September 24, 2013</div>
+          <div class="date"><i class="icon-calendar"></i>September 24, 2013</div>
           <div class="title">Vulnerable Missions Seminar</div>
           <div class="speaker">Speakers: Jim Harries, Stan Nussbaum and Jean Johnson</div>
-          <div class="video"><a href="http://vimeo.com/81777640">Vulnerable Missions</a> by Jim Harries</div>
-          <div class="video"><a href="http://vimeo.com/78033884">Dependency</a> by Stan Nussbaum</div>
-          <div class="video"><a href="http://vimeo.com/79741526">Resources</a> by Jean Johnson</div>
-          <div class="video"><a href="http://vimeo.com/83715922">Panel Discussion</a></div>
+          <div class="video"><i class="icon-facetime-video"></i><a href="http://vimeo.com/81777640">Vulnerable Missions</a> by Jim Harries</div>
+          <div class="video"><i class="icon-facetime-video"></i><a href="http://vimeo.com/78033884">Dependency</a> by Stan Nussbaum</div>
+          <div class="video"><i class="icon-facetime-video"></i><a href="http://vimeo.com/79741526">Resources</a> by Jean Johnson</div>
+          <div class="video"><i class="icon-facetime-video"></i><a href="http://vimeo.com/83715922">Panel Discussion</a></div>
         </li>
 
         <li class="calendar">
-          <div class="date">July 25-26, 2013</div>
+          <div class="date"><i class="icon-calendar"></i>July 25-26, 2013</div>
           <div class="title">Stewarding the Legacy of Donald A. McGavran</div>
         </li>
 
         <li class="calendar">
-          <div class="date">April 25-26, 2013</div>
+          <div class="date"><i class="icon-calendar"></i>April 25-26, 2013</div>
           <div class="title">Ralph D. Winter Annual Lectureship</div>
           <div class="speaker">Presenter: Gregory Boyd</div>
         </li>
 
         <li class="calendar">
-          <div class="date">April 12-14, 2012</div>
+          <div class="date"><i class="icon-calendar"></i>April 12-14, 2012</div>
           <div class="title">Ralph D. Winter Annual Lectureship</div>
           <div class="speaker">Presenter: Dudley Woodberry</div>
         </li>
