--- a/rdwrc_winter.html
+++ b/rdwrc_winter.html
@@ -81,5 +81,11 @@ keyword: rdwrc_winter
         <li><label>FMF</label> - Frontier Mission Fellowship</li>
       </ol>
     </div>
+
+    <div class="header">
+      <img class="img-rounded pull-left img-responsive img-side-margin" src="images/rdwrc_organizing_boxes.jpg" alt="Ralph D. Winter categorizing materials"/>
+      <img class="img-rounded pull-left img-responsive img-side-margin" src="images/rdwrc_category_boxes.jpg" alt="Ralph D. Winter material categories"/>
+      <img class="img-rounded pull-left img-responsive img-side-margin" src="images/rdwrc_category_boxes_details.jpg" alt="Ralph D. Winter material category details"/>
+    </div>
   </div>
 </div>
