use BlueHost email tool; correct jekyll keywords

--- a/rdwrc_calendar.html
+++ b/rdwrc_calendar.html
@@ -1,7 +1,7 @@
 ---
 layout: layout
 title: The Ralph D. Winter Archives - Calendar
-keyword: rdwrc
+keyword: rdwrc_calendar
 ---
 
 <div class="row">
