--- a/rdwrc_contact.html
+++ b/rdwrc_contact.html
@@ -1,54 +1,58 @@
 ---
 layout: layout
-title: The Ralph D. Winter Archives - Calendar
-keyword: rdwrc
+title: The Ralph D. Winter Archives - Contact
+keyword: rdwrc_contact
 ---
 
 <div class="row">
   <div class="col-md-10">
     <div class="header">
 
-      <form class="form-horizontal" role="form">
+      <form class="form-horizontal" role="form" action="http://www.bluehost.com/bluemail" enctype="multipart/form-data" method="POST">
+        <input type="hidden" name="sendtoemail" value="info@dev.ralphdwinter.org">
+        <input type="hidden" name="text" value="0"> <!-- use HTML for email content -->
+        <input type="hidden" name="subject" value="Interest in Ralph D. Winter Research Center">
+        <input type="hidden" name="redirect" value="http://dev.ralphdwinter.org/rdwrc_contact_sent.html"/>
 
         <div class="form-group">
           <label for="inputEmail" class="col-sm-2 control-label">Email</label>
           <div class="col-sm-10">
-            <input type="email" class="form-control" id="inputEmail" placeholder="Email address">
+            <input name="mailfrom" type="email" class="form-control" id="inputEmail" placeholder="Email address">
           </div>
         </div>
 
         <div class="form-group">
           <label for="inputName" class="col-sm-2 control-label">Name</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputName" placeholder="Name">
+            <input name="Name" type="text" class="form-control" id="inputName" placeholder="Name">
           </div>
         </div>
 
         <div class="form-group">
           <label for="inputState" class="col-sm-2 control-label">State</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputState" placeholder="State or Province where you reside">
+            <input name="State" type="text" class="form-control" id="inputState" placeholder="State or Province where you reside">
           </div>
         </div>
 
         <div class="form-group">
           <label for="inputCountry" class="col-sm-2 control-label">Country</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputCountry" placeholder="Country where you reside">
+            <input name="Country" type="text" class="form-control" id="inputCountry" placeholder="Country where you reside">
           </div>
         </div>
 
         <div class="form-group">
           <label for="inputOrganization" class="col-sm-2 control-label">Organization</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputOrganization" placeholder="Organization you belong to">
+            <input name="Organization" type="text" class="form-control" id="inputOrganization" placeholder="Organization you belong to">
           </div>
         </div>
 
         <div class="form-group">
           <label for="inputInterest" class="col-sm-2 control-label">Interest in<br/>Research Center</label>
           <div class="col-sm-10">
-            <textarea class="form-control" rows="3" id="inputInterest"></textarea>
+            <textarea name="Interest" class="form-control" rows="3" id="inputInterest"></textarea>
           </div>
         </div>
 
@@ -56,7 +60,7 @@ keyword: rdwrc
           <div class="col-sm-offset-2 col-sm-10">
             <div class="checkbox">
               <label>
-                <input type="checkbox">Send Newsletters by email
+                <input name="Send Newsletters" type="checkbox">Send Newsletters by email
               </label>
             </div>
           </div>
@@ -64,7 +68,7 @@ keyword: rdwrc
 
         <div class="form-group">
           <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-primary">Send Form</button>
+            <button type="submit" class="btn btn-primary">Send Contact Info</button>
           </div>
         </div>
 
