--- a/rdwrc_past_events.html
+++ b/rdwrc_past_events.html
@@ -1,7 +1,7 @@
 ---
 layout: layout
 title: The Ralph D. Winter Archives - Past Events
-keyword: rdwrc
+keyword: rdwrc_past_events
 ---
 
 <div class="row">
