--- a/lausanne_1974.html
+++ b/lausanne_1974.html
@@ -1,6 +1,7 @@
 ---
 layout: article_winter
 title: The Highest Priority - Cross-Cultural Evangelism
+author: Ralph D. Winter
 date: 1974
 location: Lausanne, Switzerland
 event: The International Congress on World Evangelization
@@ -14,7 +15,7 @@ the time they have spent reading my paper and responding to it. I cannot
 blame them if they did not always understand what I meant. I am sure
 what I wrote was not entirely clear. In almost no case am I in any
 disagreement with their emphases. Often they have added things which
-I would have put in myself had I had more space.  
+I would have put in myself had I had more space.
 </p>
 <p>
 In particular, may I say how very grateful I am to Pablo Perez and
@@ -158,7 +159,7 @@ In other words, the numbers in the last column are only apparently
 static. They do not show the fact that we are constantly gaining in the
 Christian percentage in all columns, that is, in the Western World, in
 Africa, and in Asia. (Australia and Latin America are included in the
-Western World; the Pacific I am including in the Asia column.) 
+Western World; the Pacific I am including in the Asia column.)
 </p>
 <p>
 You will now note that both the-Christian and the non-Christian populations
@@ -437,12 +438,12 @@ cultural diversity within a country was simply an evil to be overcome. I had
 no thought of excluding anyone from any church, (and I still do not), but I
 did unconsciously assume that the best thing that could happen to Black, White,
 Chicano, etc., was that they all would eventually come to the White,
-Anglo-Saxon, Protestant church and learn to be things the way that I 
+Anglo-Saxon, Protestant church and learn to be things the way that I
 felt was proper.
 </p>
 <p>
 Following this kind of America culture-Christianity, many missionaries have
-assumed that there ought to be just one national church in a country - 
+assumed that there ought to be just one national church in a country -
 even if this means none at all for certain sub-groups? Such missionaries,
 in all earnestness, have assumed that the denominational pluralism
 in their own home country is simply a sin to be avoided. They have
