use single navigation bar with title inside content

--- a/1992_1018_Dan_Fuller_to_RDW.html
+++ b/1992_1018_Dan_Fuller_to_RDW.html
@@ -1,5 +1,6 @@
 ---
-layout: article_winter
+layout: article
+which: The Ralph D. Winter Archives
 title: Letter from Dan Fuller to Ralph D. Winter
 author: Dan Fuller
 date: 1992
