--- a/lausanne_1974.html
+++ b/lausanne_1974.html
@@ -1,5 +1,6 @@
 ---
-layout: article_winter
+layout: article
+which: The Ralph D. Winter Archives
 title: The Highest Priority - Cross-Cultural Evangelism
 author: Ralph D. Winter
 date: 1974
