update layouts to use breadcrumbs use new 4.0.3 version of Font Awesome add winter categories for files that exist update admin pages for site and content to use default content

--- a/1992_1018_Dan_Fuller_to_RDW.html
+++ b/1992_1018_Dan_Fuller_to_RDW.html
@@ -1,7 +1,8 @@
 ---
 layout: article
-which: The Ralph D. Winter Archives
-title: Letter from Dan Fuller to Ralph D. Winter
+title: The Ralph D. Winter Archives
+parent: rdwrc_winter
+subtitle: Letter from Dan Fuller to Ralph D. Winter
 author: Dan Fuller
 date: 1992
 location:
