--- a/admin.html
+++ b/admin.html
@@ -15,9 +15,9 @@ keyword: admin
       From this administrator page you will be able to:
     </p>
     <ul>
-      <li><i class="icon-user"></i> Manage <a href="manage_users.html">users</a> of the site</li>
-      <li><i class="icon-file"></i> Manage document processing <a href="manage_content.html">content</a></li>
-      <li><i class="icon-sitemap"></i> Perform other <a href="manage_site.html">site</a> maintenance tasks</li>
+      <li><i class="fa fa-user"></i> Manage <a href="manage_users.html">users</a> of the site</li>
+      <li><i class="fa fa-file"></i> Manage document processing <a href="manage_content.html">content</a></li>
+      <li><i class="fa fa-sitemap"></i> Perform other <a href="manage_site.html">site</a> maintenance tasks</li>
     </ul>
   </div>
 </div>
