--- a/lausanne_1974.html
+++ b/lausanne_1974.html
@@ -1,7 +1,8 @@
 ---
 layout: article
-which: The Ralph D. Winter Archives
-title: The Highest Priority - Cross-Cultural Evangelism
+title: The Ralph D. Winter Archives
+parent: rdwrc_winter
+subtitle: The Highest Priority - Cross-Cultural Evangelism
 author: Ralph D. Winter
 date: 1974
 location: Lausanne, Switzerland
