--- a/manage_content.html
+++ b/manage_content.html
@@ -4,16 +4,21 @@ title: RDWRC Admin
 keyword: manage_content
 ---
 
+<ol class="breadcrumb">
+  <li><a href="index.html">The Ralph D. Winter Research Center</a></li>
+  <li><a href="admin.html">Admin</a></li>
+  <li class="active">Manage Content</li>
+</ol>
+
 <div class="large">
-  <div class="container headline">
-    <h1>Admin page : <a href="index.html">The Ralph D. Winter Research Center</a></h1>
+  <div class="container">
     <p>
       From this administrator page you will be able to:
     </p>
     <ul>
-      <li>Manage <a href="manage_users.html">users</a> of the site</li>
-      <li>Manage document processing <a href="manage_content.html">content</a></li>
-      <li>Perform other <a href="manage_site.html">site</a> maintenance tasks</li>
+      <li><i class="fa fa-user"></i> Manage <a href="manage_users.html">users</a> of the site</li>
+      <li><i class="fa fa-file"></i> Manage document processing <a href="manage_content.html">content</a></li>
+      <li><i class="fa fa-sitemap"></i> Perform other <a href="manage_site.html">site</a> maintenance tasks</li>
     </ul>
   </div>
 </div>
