--- a/manage_users.html
+++ b/manage_users.html
@@ -13,7 +13,7 @@ keyword: manage_users
 <div class="container">
   <div class="row">
     <div class="col-md-offset-11 col-md-1">
-      <a href="add_user.html" class="btn btn-primary"><i class="icon-plus"></i> Add</a>
+      <a href="add_user.html" class="btn btn-primary"><i class="fa fa-plus"></i> Add</a>
     </div>
   </div>
   <div class="row">
@@ -28,7 +28,7 @@ keyword: manage_users
       <tr>
         <td>Admin</td>
         <td>admin@ralphdwinter.org</td>
-        <td><i class="icon-check"><i></td>
+        <td><i class="fa fa-check"><i></td>
         <td>Admin</td>
         <td><a href=""><i class=""></i></a></td>
       </tr>
