--- a/rdwrc.html
+++ b/rdwrc.html
@@ -1,6 +1,8 @@
 ---
 layout: layout
-title: The Ralph D. Winter Archives
+title: Home
+subtitle: The Ralph D. Winter Research Center
+parent: index
 keyword: rdwrc
 ---
 
