--- a/rdwrc_mcgavran.html
+++ b/rdwrc_mcgavran.html
@@ -1,6 +1,8 @@
 ---
 layout: layout
-title: The Donald McGavran Archives
+title: Home
+subtitle: Donald McGavran Archives
+parent: index
 keyword: rdwrc_mcgavran
 ---
 
@@ -8,7 +10,7 @@ keyword: rdwrc_mcgavran
   <aside class="col-md-2 outline">
       <ol>
         <li>
-          <a href="#">Papers</a>
+          <h5>Papers</h5>
           <ol>
             <li><a href="#">Published</a></li>
             <li><a href="#">Unpublished</a></li>
