--- a/rdwrc_winter.html
+++ b/rdwrc_winter.html
@@ -1,6 +1,8 @@
 ---
 layout: layout
-title: The Ralph D. Winter Archives
+title: Home
+subtitle: The Ralph D. Winter Archives
+parent: index
 keyword: rdwrc_winter
 ---
 
@@ -8,17 +10,17 @@ keyword: rdwrc_winter
   <aside class="col-md-2 outline">
       <ol>
         <li>
-          <a href="#">Papers</a>
+          <h5>Papers</h5>
           <ol>
-            <li><a href="#">Published</a></li>
+            <li><a href="rdwrc_winter_published.html">Published</a></li>
             <li><a href="#">Unpublished</a></li>
-            <li><a href="#">Letters</a></li>
+            <li><a href="rdwrc_winter_letters.html">Letters</a></li>
             <li><a href="#">Other materials</a></li>
           </ol>
         </li>
         <li><a href="#">Audio presentations</a></li>
         <li><a href="#">Video presentations</a></li>
-        <li><a href="#">Photographs</a></li>
+        <li><a href="rdwrc_winter_photos.html">Photographs</a></li>
         <li><a href="#">Related materials</a></li>
       </ol>
   </aside>
