--- a/rdwrc_winter_photos.html
+++ b/rdwrc_winter_photos.html
@@ -1,12 +1,16 @@
 ---
 layout: layout
-title: The Ralph D. Winter Archives - Photos
-keyword: rdwrc_photos
+title: The Ralph D. Winter Archives
+subtitle: Photos
+parent: rdwrc_winter
+keyword: rdwrc_winter_photos
 ---
 
 <div class="row">
   <div class="col-md-10">
     <div class="header">
+      <h4>Photographs related to Ralph D. Winter:</h4>
+
       <p>
         <b>HINT</b>: click on any photo to see the original sized photo
       </p>
