add PDFs to winter categories

--- a/rdwrc_winter.html
+++ b/rdwrc_winter.html
@@ -13,9 +13,9 @@ keyword: rdwrc_winter
           <h5>Papers</h5>
           <ol>
             <li><a href="rdwrc_winter_published.html">Published</a></li>
-            <li><a href="#">Unpublished</a></li>
+            <li><a href="rdwrc_winter_unpublished.html">Unpublished</a></li>
             <li><a href="rdwrc_winter_letters.html">Letters</a></li>
-            <li><a href="#">Other materials</a></li>
+            <li><a href="rdwrc_winter_other.html">Other materials</a></li>
           </ol>
         </li>
         <li><a href="rdwrc_winter_audio.html">Audio presentations</a></li>
