--- a/rdwrc_winter_letters.html
+++ b/rdwrc_winter_letters.html
@@ -12,7 +12,28 @@ keyword: rdwrc_winter_letters
       <h4>Letters related to Ralph D. Winter:</h4>
 
       <ol class="letters">
-        <li><i class="fa fa-file-text-o fa-lg"></i> <a href="1992_1018_Dan_Fuller_to_RDW.html">Letter from Dan Fuller to Ralph D. Winter</a></li>
+        <li><i class="fa fa-file-text-o fa-lg"></i> <span class="list-date">1965</span> <a href="pdfs/Nazarene Seminary lecture plans and notes.pdf">Nazarene Seminary lecture plans and notes</a> <span class="list-pdf">(PDF)</span></li>
+        <li><i class="fa fa-file-text-o fa-lg"></i> <span class="list-date">1966</span> <a href="pdfs/PERT planning Berlin.pdf">Missions Pert Committee at Fuller Seminery</a> <span class="list-pdf">(PDF)</span></li>
+        <li><i class="fa fa-file-text-o fa-lg"></i> <span class="list-date">1971</span> <a href="pdfs/Sunset or sunrise in world mission.pdf">Sunset or Sunrise?</a> in world missions <span class="list-pdf">(PDF)</span></li>
+        <li><i class="fa fa-file-text-o fa-lg"></i> <span class="list-date">1972</span> <a href="pdfs/1972 0322 Winter let to start ASM.pdf">Letter from Ralph D. Winter to start the American Society of Missiology (ASM)</a> <span class="list-pdf">(PDF)</span></li>
+        <li><i class="fa fa-file-text-o fa-lg"></i> <span class="list-date">1972</span> <a href="pdfs/1972 0415 Myklebust on need for intl. journal.pdf">Letter from O. G. Myklbust on suggestions for International journal on missions</a> <span class="list-pdf">(PDF)</span></li>
+        <li><i class="fa fa-file-text-o fa-lg"></i> <span class="list-date">1972</span> <a href="pdfs/1972 0520 Winter let to follow-up Start of ASM.pdf">Letter from Ralph D. Winter to follow-up on Start the American Society of Missiology (ASM)</a> <span class="list-pdf">(PDF)</span></li>
+        <li><i class="fa fa-file-text-o fa-lg"></i> <span class="list-date">1972</span> <a href="pdfs/1972 0615 ASM start press release.pdf">Press release on start of American Society of Missiology (ASM)</a> <span class="list-pdf">(PDF)</span></li>
+        <li><i class="fa fa-file-text-o fa-lg"></i> <span class="list-date">1972</span> <a href="pdfs/1972 0810 G.Myyklebust letter on need for Miss. journal.pdf">Letter from O. G. Myklbust on need for International journal on missions</a> <span class="list-pdf">(PDF)</span></li>
+        <li><i class="fa fa-file-text-o fa-lg"></i> <span class="list-date">1972</span> <a href="pdfs/1972 0830 G.Anderson to C.Forman on start of ASM.pdf">Letter from Gerald Anderson to Charles Forman on start of American Society of Missiology (ASM)</a> <span class="list-pdf">(PDF)</span></li>
+        <li><i class="fa fa-file-text-o fa-lg"></i> <span class="list-date">1972</span> <a href="pdfs/1972 0830 G.Anderson to D.Stowe on start of ASM.pdf">Letter from Gerald Anderson to David Stowe on start of American Society of Missiology (ASM)</a> <span class="list-pdf">(PDF)</span></li>
+        <li><i class="fa fa-file-text-o fa-lg"></i> <span class="list-date">1972</span> <a href="pdfs/1972 0830 G.Anderson to Tippett on journal issues_missiology.pdf">Letter from Gerald Anderson to Alan Tippett on Journal of Missiology issues</a> <span class="list-pdf">(PDF)</span></li>
+        <li><i class="fa fa-file-text-o fa-lg"></i> <span class="list-date">1972</span> <a href="pdfs/1972+- G.Anderson press release on IAMS.pdf">Press release on International Association for Mission Studies (IAMS)</a> <span class="list-pdf">(PDF)</span></li>
+        <li><i class="fa fa-file-text-o fa-lg"></i> <span class="list-date">1972</span> <a href="pdfs/1972 +- RDW handwritten note on PA-Miss issues.pdf">Ralph D. Winter hand written note on practical Anthropology in missions issues</a> <span class="list-pdf">(PDF)</span></li>
+        <li><i class="fa fa-file-text-o fa-lg"></i> <span class="list-date">1972</span> <a href="pdfs/1972 +- RDW memo before L74.pdf">Ralph D. Winter hand written memo before Lausanne 1974</a> <span class="list-pdf">(PDF)</span></li>
+        <li><i class="fa fa-file-text-o fa-lg"></i> <span class="list-date">1973</span> <a href="pdfs/1973 1030 RDW let G.Anderson occ bul & missiology.pdf">Letter from Gerald Anderson on Occasional Bulletin and Missiology</a> <span class="list-pdf">(PDF)</span></li>
+        <li><i class="fa fa-file-text-o fa-lg"></i> <span class="list-date">1973</span> <a href="pdfs/1973 1112 G.Anderson let RDW ASM_Miss.details.pdf">Letter from Gerald Anderson on American Society of Missiology (ASM)</a> <span class="list-pdf">(PDF)</span></li>
+        <li><i class="fa fa-file-text-o fa-lg"></i> <span class="list-date">1974</span> <a href="pdfs/1974 0506 RDW let G.Anderson need for missiology journal.pdf">Letter from Ralph D. Winter to Gerald Anderson on need for Missiology journal</a> <span class="list-pdf">(PDF)</span></li>
+        <li><i class="fa fa-file-text-o fa-lg"></i> <span class="list-date">1974</span> <a href="pdfs/1974 0607 Tippet to MISSIOLOGY bd.pdf">Letter from Alan Tippett to Missiology board</a> <span class="list-pdf">(PDF)</span></li>
+        <li><i class="fa fa-file-text-o fa-lg"></i> <span class="list-date">1974</span> <a href="pdfs/1974 0705 Wagner definition of Church Growth.pdf">Letter from C. P. Wagner on definition of church growth</a> <span class="list-pdf">(PDF)</span></li>
+        <li><i class="fa fa-file-text-o fa-lg"></i> <span class="list-date">1992</span> <a href="1992_1018_Dan_Fuller_to_RDW.html">Letter from Dan Fuller to Ralph D. Winter</a></li>
+        <li><i class="fa fa-file-text-o fa-lg"></i> <span class="list-date">1999</span> <a href="pdfs/1999 1024 Winter let to Billy Graham.pdf">Letter from Ralph D. Winter to Billy Graham</a> <span class="list-pdf">(PDF)</span></li>
+        <li><i class="fa fa-file-text-o fa-lg"></i> <span class="list-date">2004</span> <a href="pdfs/2004 0404 Winter let to hesselgrave.pdf">Letter from Ralph D. Winter to David Hesselgrave</a> <span class="list-pdf">(PDF)</span></li>
       </ol>
     </div>
   </div>
