use Gregs Vimeo account

--- a/rdwrc_winter_video.html
+++ b/rdwrc_winter_video.html
@@ -12,16 +12,17 @@ keyword: rdwrc_winter_video
       <h4>Video presentations related to Ralph D. Winter:</h4>
 
       <ol class="videos">
-        <li><i class="fa fa-video-camera"></i> <span class="list-date">1980</span> <a href="http://vimeo.com/66985793">CLIIS Strategy Lecture</a> by Ralph D. Winter @ WCIU</li>
-        <li><i class="fa fa-video-camera"></i> <span class="list-date">1981</span> <a href="http://vimeo.com/75257378">Perspectives Lession 5</a> by Ralph D. Winter @ WCIU</li>
-        <li><i class="fa fa-video-camera"></i> <span class="list-date">1982</span> <a href="http://vimeo.com/76016794">History of Missions</a> by Ralph D. Winter @ WCIU</li>
-        <li><i class="fa fa-video-camera"></i> <span class="list-date">1983</span> <a href="http://vimeo.com/66986177">Confronting the New Era in Missions</a> by Ralph D. Winter @ WCIU</li>
+        <li><i class="fa fa-video-camera"></i> <span class="list-date">1980</span> <a href="http://vimeo.com/73829901">CLIIS Strategy Lecture</a> by Ralph D. Winter @ WCIU</li>
+        <li><i class="fa fa-video-camera"></i> <span class="list-date">1981</span> <a href="http://vimeo.com/75249494">Perspectives Lession 5</a> by Ralph D. Winter @ WCIU</li>
+        <li><i class="fa fa-video-camera"></i> <span class="list-date">1982</span> <a href="http://vimeo.com/74517160">The History of Missions</a> by Ralph D. Winter @ WCIU</li>
+        <li><i class="fa fa-video-camera"></i> <span class="list-date">1983</span> <a href="http://vimeo.com/74704880">Confronting the New Era in Missions</a> by Ralph D. Winter @ WCIU</li>
         <li><i class="fa fa-video-camera"></i> <span class="list-date">1983</span> <a href="http://vimeo.com/66362763">Ralph D. Winter and Eric Stadell</a> @ USCWM</li>
 
-        <li><i class="fa fa-video-camera"></i> <span class="list-date">1980's</span> <a href="http://vimeo.com/74976849">Understanding the World Christian : Lecture 1</a> by Ralph D. Winter @ Regent College</li>
-        <li><i class="fa fa-video-camera"></i> <span class="list-date">1980's</span> <a href="http://vimeo.com/66370186">Understanding the World Christian : Lecture 2</a> by Ralph D. Winter @ Regent College</li>
-        <li><i class="fa fa-video-camera"></i> <span class="list-date">1980's</span> <a href="http://vimeo.com/66369440">Understanding the World Christian : Lecture 3</a> by Ralph D. Winter @ Regent College</li>
-        <li><i class="fa fa-video-camera"></i> <span class="list-date">1980's</span> <a href="http://vimeo.com/76013048">Understanding the World Christian : Lecture 5</a> by Ralph D. Winter @ Regent College</li>
+        <li><i class="fa fa-video-camera"></i> <span class="list-date">1980's</span> <a href="http://vimeo.com/73918686">Understanding the World Christian : Lecture 1</a> by Ralph D. Winter @ Regent College</li>
+        <li><i class="fa fa-video-camera"></i> <span class="list-date">1980's</span> <a href="http://vimeo.com/73971176">Understanding the World Christian : Lecture 2</a> by Ralph D. Winter @ Regent College</li>
+        <li><i class="fa fa-video-camera"></i> <span class="list-date">1980's</span> <a href="http://vimeo.com/73996946">Understanding the World Christian : Lecture 3</a> by Ralph D. Winter @ Regent College</li>
+        <li><i class="fa fa-video-camera"></i> <span class="list-date">1980's</span> <a href="http://vimeo.com/74174520">Understanding the World Christian : Lecture 4</a> by Ralph D. Winter @ Regent College</li>
+        <li><i class="fa fa-video-camera"></i> <span class="list-date">1980's</span> <a href="http://vimeo.com/74903468">Understanding the World Christian : Lecture 5</a> by Ralph D. Winter @ Regent College</li>
 
         <li><br/></li>
 
