add UCWM videos

--- a/rdwrc_winter_video.html
+++ b/rdwrc_winter_video.html
@@ -17,12 +17,22 @@ keyword: rdwrc_winter_video
         <li><i class="fa fa-video-camera"></i> <span class="list-date">1982</span> <a href="http://vimeo.com/74517160">The History of Missions</a> by Ralph D. Winter @ WCIU</li>
         <li><i class="fa fa-video-camera"></i> <span class="list-date">1983</span> <a href="http://vimeo.com/74704880">Confronting the New Era in Missions</a> by Ralph D. Winter @ WCIU</li>
         <li><i class="fa fa-video-camera"></i> <span class="list-date">1983</span> <a href="http://vimeo.com/66362763">Ralph D. Winter and Eric Stadell</a> @ USCWM</li>
+        <li><i class="fa fa-video-camera"></i> <a href="http://vimeo.com/3245294">Do Hard Things</a> by Ralph D. Winter @ USCWM</li>
 
         <li><i class="fa fa-video-camera"></i> <span class="list-date">1980's</span> <a href="http://vimeo.com/73918686">Understanding the World Christian : Lecture 1</a> by Ralph D. Winter @ Regent College</li>
         <li><i class="fa fa-video-camera"></i> <span class="list-date">1980's</span> <a href="http://vimeo.com/73971176">Understanding the World Christian : Lecture 2</a> by Ralph D. Winter @ Regent College</li>
         <li><i class="fa fa-video-camera"></i> <span class="list-date">1980's</span> <a href="http://vimeo.com/73996946">Understanding the World Christian : Lecture 3</a> by Ralph D. Winter @ Regent College</li>
         <li><i class="fa fa-video-camera"></i> <span class="list-date">1980's</span> <a href="http://vimeo.com/74174520">Understanding the World Christian : Lecture 4</a> by Ralph D. Winter @ Regent College</li>
         <li><i class="fa fa-video-camera"></i> <span class="list-date">1980's</span> <a href="http://vimeo.com/74903468">Understanding the World Christian : Lecture 5</a> by Ralph D. Winter @ Regent College</li>
+
+        <li><br/></li>
+
+        <li><i class="fa fa-video-camera"></i> <span class="list-date">2008</span> <a href="http://vimeo.com/4791305">Ralph D. Winter Tribute</a></li>
+        <li><i class="fa fa-video-camera"></i> <span class="list-date">2009</span> <a href="http://vimeo.com/5791707">Ralph D. Winter Memorial Service : Part 1</a></li>
+        <li><i class="fa fa-video-camera"></i> <span class="list-date">2009</span> <a href="http://vimeo.com/5792833">Ralph D. Winter Memorial Service : Part 2</a></li>
+        <li><i class="fa fa-video-camera"></i> <span class="list-date">2009</span> <a href="http://vimeo.com/5803035">Ralph D. Winter Memorial Service : Part 3</a></li>
+        <li><i class="fa fa-video-camera"></i> <span class="list-date">2009</span> <a href="http://vimeo.com/5804638">Ralph D. Winter Memorial Service : Part 4</a></li>
+        <li><i class="fa fa-video-camera"></i> <span class="list-date">2009</span> <a href="http://vimeo.com/5806234">Ralph D. Winter Memorial Service : Part 5</a></li>
 
         <li><br/></li>
 
