--- a/manage_users.html
+++ b/manage_users.html
@@ -10,28 +10,30 @@ keyword: manage_users
   <li class="active">Manage Users</li>
 </ol>
 
-<div class="container">
-  <div class="row">
-    <div class="col-md-offset-11 col-md-1">
-      <a href="add_user.html" class="btn btn-primary"><i class="fa fa-plus"></i> Add</a>
+<div class="large">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-offset-11 col-md-1">
+        <a href="add_user.html" class="btn btn-primary"><i class="fa fa-plus"></i> Add</a>
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <table class="table table-striped table-hover">
-      <tr>
-        <th>Name</th>
-        <th>Email</th>
-        <th>Active</th>
-        <th>Role</th>
-        <th></th>
-      </tr>
-      <tr>
-        <td>Admin</td>
-        <td>admin@ralphdwinter.org</td>
-        <td><i class="fa fa-check"><i></td>
-        <td>Admin</td>
-        <td><a href=""><i class=""></i></a></td>
-      </tr>
-    </table>
+    <div class="row">
+      <table class="table table-striped table-hover">
+        <tr>
+          <th>Name</th>
+          <th>Email</th>
+          <th>Active</th>
+          <th>Role</th>
+          <th></th>
+        </tr>
+        <tr>
+          <td>Admin</td>
+          <td>admin@ralphdwinter.org</td>
+          <td><i class="fa fa-check"></i></td>
+          <td>Admin</td>
+          <td><a href=""><i class=""></i></a></td>
+        </tr>
+      </table>
+    </div>
   </div>
 </div>
