add new Winter article

--- a/rdwrc_winter_published.html
+++ b/rdwrc_winter_published.html
@@ -12,6 +12,7 @@ keyword: rdwrc_winter_published
       <h4>Published by Ralph D. Winter:</h4>
 
       <ol class="published">
+        <li><i class="fa fa-file-text fa-lg"></i> <span class="list-date">1971</span> <a href="1970-71-Structural-Obstacle-to-Evangelism.html">Structural Obstacles to Evangelism</a></li>
         <li><i class="fa fa-file-text fa-lg"></i> <span class="list-date">1974</span> <a href="lausanne_1974.html">The Highest Priority - Cross-Cultural Evangelism</a> (at 1974 Lausanne Conference)</li>
         <li><i class="fa fa-file-text fa-lg"></i> <span class="list-date">1998</span> <a href="pdfs/1998 0115 Winter Largest Stumbling Block.pdf">The Largest Stumbling Block to Leadership Development in the Global Church</a> (in IJFM) <span class="list-pdf">(PDF)</span></li>
         <li><i class="fa fa-file-text fa-lg"></i> <span class="list-date">2010</span> <a href="pdfs/Dr Ralph Winter tribute by Richard Dodding.jpg">A Tribute to D. Ralph Winter 1924-2009 by Richad Dodding</a> (in Mission Fest) <span class="list-pdf">(image)</span></li>
